# KokkosApplication

./: .clang-format  .gitignore  CMakeLists.txt
include/gui/: mainwindow.h  matrixwidget.h  nussinovwidget.h  optionswidget.h  speedupgraph.h  speeduptable.h
include/parallel/: gpu_code.h
src/: main.cpp
src/gui/: mainwindow.cpp  mainwindow.ui  matrixoptions.ui  matrixwidget.cpp  nussinovoptions.ui  nussinovwidget.cpp  optionswidget.cpp  optionswidget.ui  speedupgraph.cpp  speeduptable.cpp
src/parallel/: gpu_code.cpp
